--- a/weather_app/templates/weather_app/index.html
+++ b/weather_app/templates/weather_app/index.html
@@ -44,7 +44,7 @@
 
     {% else %}
     <div class="authen">
-      <p>welcome!!  please login </p> 
+      <p>welcome!!  please loggin </p> 
       <div class="btn-function">
         <a href="{% url 'login' %}"> login</a>  
         <a href="{% url 'register_weather_info' %}">register</a>
