--- a/weather_app/templates/registration/account_activation_email.html
+++ b/weather_app/templates/registration/account_activation_email.html
@@ -1,5 +1,5 @@
 Hi, {{user.username}},
 
-Here is the activation link:
+Click the link below to Activate your account:
 
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
