--- a/weather_app/templates/weather_app/city_weather.html
+++ b/weather_app/templates/weather_app/city_weather.html
@@ -32,7 +32,7 @@
   </div>
   {% endif %}
 
-  <div>
+  <!-- <div>
     <form id="save-weather-form" method="post" action="{% url 'save_weather' %}">
       {% csrf_token %}
       <input type="hidden" name="city" value="{{ weather_data.city }}">
@@ -46,7 +46,7 @@
       {% if request.user.is_authenticated %}
       <button type="submit" class="save-weather">Save Weather</button>
       {% endif %}
-  </form>
+  </form> -->
   
 </div>
 {% endif %}
