adding spinner loading

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -233,3 +233,26 @@ button.save-weather:hover {
 .btn-function > a:hover {
   background-color: #37c637;
 }
+
+.spinner {
+  display: none; /* Hidden by default */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #ff0303;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
