--- a/weather_app/templates/weather_app/index.html
+++ b/weather_app/templates/weather_app/index.html
@@ -10,7 +10,9 @@
   </head>
   
   <body>
-    <div class="weather-header">
+    <div class="spinner" id="spinner"></div>
+    <div id="content">
+      <div class="weather-header">
         <h1>Weather Dashboard - Huynh Lam Duy</h1>
         <!-- save weather history -->
 
@@ -104,7 +106,7 @@
             </div>
           {% endif %}
           {% if weather_data %}
-              <div>
+              <div >
                   {% include "weather_app/city_weather.html" with weather_data=weather_data messages=messages %}
                   <div>
                       <form id="save-weather-form" method="post" action="{% url 'save_weather' %}">
@@ -140,10 +142,35 @@
         
       </div>
     </div>
+    </div>
+    
 
 
     
     <script>
+
+      document.addEventListener("DOMContentLoaded", function() {
+        const spinner = document.getElementById("spinner");
+        const content = document.getElementById("content");
+
+        function showSpinner() {
+            spinner.style.display = "block";
+            content.style.display = "none";
+        }
+
+        function hideSpinner() {
+            spinner.style.display = "none";
+            content.style.display = "block";
+        }
+
+        // Show spinner on page load
+        showSpinner();
+
+        // Hide spinner when the page is fully loaded
+        window.addEventListener("load", function() {
+            hideSpinner();
+        });
+      });
       document.querySelector('.current-location-btn').addEventListener('click', function() {
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
